# gtk4_list_colors

./: README.md  meson.build
resources/: github.aeldemery.gtk4_list_colors.gresource.xml  meson.build
resources/styles/: listview_colors.css
sources/: ColorGridWidget.vala  ColorListModel.vala  ColorSelectionWidget.vala  ColorWidget.vala  Main.vala  MainWindow.vala  meson.build
